# chessboard

./: .gitignore  CMakeLists.txt  README.md
ChessBoard/include/: Camera.hpp  Cboard_Tile.hpp  Overboard.hpp  Window.hpp  highlighting.hpp
ChessBoard/src/: Object.cpp
ChessBoard/tests/: main.cpp
include/: Chessboard.hpp  Object.hpp  Utils.hpp
src/: Cboard_Tile.cpp  Chessboard.cpp
